Regression: Geometry Node: No update for tree with muted nodes #102751

Closed
opened 2022-11-24 21:33:36 +01:00 by Iliya Katushenock · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.5.0 Alpha, branch: arcpatch-D16471, commit date: 2022-11-18 20:37, hash: 48cfe11fa6
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-17 22:27, hash: 2c096f17a6

Caused by: {b4c3ea264439}

Short description of error

Geometry Node: No update for tree with muted nodes

When the link is cut, the update is ignored.

2022-11-24 23-04-02.mp4

Exact steps for others to reproduce the error

  1. Create some new node in the geometry node group
  2. Mute this knot
  3. Cut the link it contains

NoUpdate.blend

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.5.0 Alpha, branch: arcpatch-[D16471](https://archive.blender.org/developer/D16471), commit date: 2022-11-18 20:37, hash: `48cfe11fa6` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-17 22:27, hash: `2c096f17a6` Caused by: {b4c3ea264439} **Short description of error** Geometry Node: No update for tree with muted nodes When the link is cut, the update is ignored. [2022-11-24 23-04-02.mp4](https://archive.blender.org/developer/F13966496/2022-11-24_23-04-02.mp4) **Exact steps for others to reproduce the error** 1. Create some new node in the geometry node group 2. Mute this knot 3. Cut the link it contains [NoUpdate.blend](https://archive.blender.org/developer/F13966500/NoUpdate.blend)
Author
Member

Added subscriber: @mod_moder

Added subscriber: @mod_moder
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

This issue was referenced by b43bdd8ba2

This issue was referenced by b43bdd8ba28cdad11d10e0028beeb210ebe083a9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-11-26 13:47:00 +01:00
Thomas Dinges added this to the 3.5 milestone 2023-02-07 18:56:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102751
No description provided.